<resources>
    <string name="app_name">Restaurant</string>
    <string name="slogan">Good time, Great taste.</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="registered">Registered</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="login_admin">Login Admin</string>
    <string name="anonymous_access">Anonymous access</string>
    <string name="admin_access">Admin access</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="cancel">Cancel</string>
    <string name="forget_password" translatable="false">Forget password?</string>
    <string name="user_mandatory">Insert a Username</string>
    <string name="password_mandatory">Insert a Password</string>
    <string name="email_mandatory">Insert an Email</string>
    <string name="location_mandatory">Insert a Location</string>
    <string name="name_mandatory">Insert a Name</string>
    <string name="surname_mandatory">Insert a Surname</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="load_more">Load more ...</string>
    <string name="load_less">Load less ...</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="update_account">Account has been updated</string>
    <string name="update_account_info" translatable="false">Account has been updated: info</string>
    <string name="old_password">Insert your old password</string>
    <string name="new_password">Insert the new password</string>
    <string name="repeat_password">Repeat the new password</string>
    <string name="password_not_match">Passwords don\'t match </string>
    <string name="password_same">Your new password cannot be same as old password</string>
    <string name="save">Save</string>
    <string name="error_old_pass">Old password is wrong</string>
    <string name="password_saved">Password has been saved</string>
    <string name="password_not_saved">Password has not been saved</string>
    <string name="email_error">Insert a real mail</string>
    <string name="email_exist">This mail already exist</string>
    <string name="password_weak">Password weak</string>
    <string name="register_wait">Registering Please Wait...</string>
    <string name="login_wait">Sign in Please Wait...</string>
    <string name="saving_wait">Saving Wait...</string>
    <string name="no_user">There isn\'t a user with this email</string>
    <string name="user_collision">This email already exist</string>
    <string name="no_admin">The user is not an Admin</string>
    <string name="is_admin">The user is an Admin</string>
    <string name="login_error_pass">Password incorrect</string>
    <string name="login_error_email">The email address is badly formatted</string>
    <string name="login_error">Invalid credential</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="creating_account">Creating account</string>
    <string name="loading_cities">Loading cities...</string>
    <string name="birthday">Date of Birth</string>
    <string name="add_image">Add a new image</string>
    <string name="add_favorite">Added to favorites</string>
    <string name="add_tag">Added tag</string>
    <string name="remove_tag">Removed tag</string>
    <string name="remove_favorite">Removed from favorites</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="account_information">Information</string>
    <string name="login_first">You should login first</string>
    <string name="account_name">Name:</string>
    <string name="account_surname">Surname:</string>
    <string name="account_username" translatable="false">Username:</string>
    <string name="account_mail">Mail:</string>
    <string name="account_location">Location:</string>
    <string name="account_date">Date:</string>
    <string name="account_edit">Edit data</string>
    <string name="data_has_been_successfully_updated">Data has been successfully updated</string>
    <string name="password_has_been_successfully_updated">Password has been successfully updated</string>
    <string name="updating_account_wait">Updating Please Wait...</string>
    <string name="retrieving_account_wait">Retrieving data Please Wait...</string>
    <string name="retrieving_data">Retrieving data Please Wait...</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="back">Back</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="login_admin_title">Login - Admin</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="dashboard_admin" translatable="true">Dashboard Admin</string>
    <string name="dashboard_anonymous" translatable="true">Dashboard Anonymous</string>
    <string name="restaurant">Restaurant</string>
    <string name="add_new_restaurant">Add new restaurant</string>
    <string name="order">Sort</string>
    <string name="edit_restaurant">Edit restaurant</string>
    <string name="edit_restaurant_times">Edit restaurant times</string>
    <string name="my_restaurant">My Restaurants</string>
    <string name="restuarant_name">Restaurant\'s name</string>
    <string name="restuarant_description">Restaurant\'s description</string>
    <string name="restuarant_email">Restaurant\'s email</string>
    <string name="restuarant_address">Restaurant\'s address</string>
    <string name="restuarant_city">Restaurant\'s city</string>
    <string name="restuarant_phone">Restaurant\'s phone</string>
    <string name="restuarant_tags" translatable="false">Tags</string>
    <string name="restuarant_category">Restaurant\'s category</string>
    <string name="loading_categories">Loading categories ...</string>
    <string name="create">Create</string>
    <string name="description_mandatory">Insert a description</string>
    <string name="mail_mandatory">Insert a mail</string>
    <string name="address_mandatory" translatable="false">Insert an address</string>
    <string name="phone_mandatory">Insert a phone number</string>
    <string name="phone_not_digits_only">Insert a real phone number</string>
    <string name="retrieving_restaurant_wait">Retrieving data Please Wait...</string>
    <string name="notification_title">Notification</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="confirm_notification_delete">The notification will be deleted</string>
    <string name="delete">Delete</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="new_restaurant_content">A new restaurant has been added in your city</string>
    <string name="new_favourite">New Favorite</string>
    <string name="new_favourite_description">Someone has bookmarked your restaurant</string>
    <string name="new_review">New Review</string>
    <string name="new_review_description">Someone has added a new review to:</string>
    <string name="favourites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="no_element">No result found</string>
    <string name="create_review">Create review</string>
    <string name="insert_experience">Your experience</string>
    <string name="experience">Experience</string>
    <string name="insert_service">Service</string>
    <string name="insert_location">Location</string>
    <string name="insert_problems">Problems</string>
    <string name="experience_mandatory">Experience is mandatory</string>
    <string name="Filter">Filters</string>
    <string name="all_categories">All categories</string>
    <string name="pizzeria">Pizzeria</string>
    <string name="bar">Bar</string>
    <string name="sushi">Sushi</string>
    <string name="fast_food">Fast food</string>
    <string name="pasticceria">Pastry Shop</string>
    <string name="voto_maggiore_di">Rating >=</string>
    <string name="days_of_the_week">Days of opening</string>
    <string name="all_day">All days</string>
    <string name="morning">Morning:</string>
    <string name="evening">Evening:</string>
    <string name="lunedì">M</string>
    <string name="martedì">T</string>
    <string name="mercoledì">W</string>
    <string name="giovedì">T</string>
    <string name="venerdì">F</string>
    <string name="sabato">S</string>
    <string name="domenica">S</string>
    <string name="closed">Closed</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="select_time">Select time</string>
    <string name="edit_times">Update restaurant hours</string>
    <string name="times_saved">Saved</string>
    <string name="restaurant_data_saved">Saved</string>
    <string name="restaurant_created">Restaurant created</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_basic" translatable="false">BasicActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_account" translatable="false">Account</string>
    <string name="title_activity__password" translatable="false">Activity_Password</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>
</resources>