<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_user_notifications"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/notification_title" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_user_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_user_restaurant"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/restaurant" />

        <item
            android:id="@+id/nav_user_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_user_test"
            android:title="Test" />
    </group>
</menu>