<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.Fragment_Access">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_primary"
        android:id="@+id/register_button"

        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"

        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias=".5"
        app:layout_constraintHorizontal_bias=".5"

        android:text="@string/register"
        android:background="@drawable/button_primary_shape"

        >
    </androidx.appcompat.widget.AppCompatButton>


    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_primary"
        android:id="@+id/login_button"

        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"

        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"

        app:layout_constraintVertical_bias=".1"
        app:layout_constraintHorizontal_bias=".5"

        android:text="@string/login"
        android:background="@drawable/button_primary_shape"
        >
    </androidx.appcompat.widget.AppCompatButton>


    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_primary"
        android:id="@+id/anonymous_access_button"

        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"

        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias=".9"
        app:layout_constraintHorizontal_bias=".5"

        android:text="@string/anonymous_access"
        android:background="@drawable/button_primary_shape">



    </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/access_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/admin_access"


            android:textColor="@color/blue_link"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".3">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>











